# mcmp

./: .gitignore  meson.build
cli/: meson.build
cli/src/linux/: main.c  test.c  test3.c
cli/test/: socket-test.c
include/mcmp/: log.h  mcmp.h  proto.h  protocol.h  stat.h  statos.h  time.h  utilities.h
policy/: meson.build
policy/include/monarch/: log.h  monarch.h  proto.h  protocol.h  stat.h  statos.h  time.h  utilities.h
policy/src/common/: log.c  monarch.c  statos.c
policy/src/linux/: log.c  monarch.c  utilities.c
routines/: meson.build
routines/include/monarch/routines/: consumer.h  lock.h  monitor.h  pool.h  routine.h  worker.h
routines/src/common/: consumer.c  pool.c
routines/src/linux/: lock.c  monitor.c  pool.c  routine.c  worker.c
server/: meson.build
server/include/monarch/server/: broadcast.h  client.h  dispatcher.h  heartbeat.h  protocol.h  server.h
server/src/common/: clients.c  dispatcher.c  heartbeat.c  server.c
server/src/linux/: broadcast.c  clients.c  protocol.c  server.c
src/common/: log.c  mcmp.c  statos.c
src/linux/: mcmp.c  time.c
test/: monarch-bitmap.c  simple-test.c
utilities/: meson.build
utilities/include/mcmp/util/: atomicbitmap.h  bitmap.h  chunkedqueue.h  queue.h  setqueue.h
utilities/include/monarch/util/: atomicbitmap.h  bitmap.h  chunkedqueue.h  queue.h  setqueue.h
utilities/src/common/: atomicbitmap.c  bitmap.c  chunkedqueue.c  queue.c  setqueue.c
utilities/test/: test_setqueue.c
